# tree-sitter-bnf-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  grammar.js  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  corpus.yml  pages.yml
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs
docs/: _config.yml  editors.md  index.md  tutorial.md
docs/tutorial/: 00-concepts.md  01-getting-started.md  02-syntax.md  03-concepts.md  03-directives.md  04-cheatsheet.md  04-directives.md  05-cheatsheet.md  05-end-to-end.md  06-analysing.md  06-end-to-end.md  07-refactoring.md  07-worked-example.md  08-analysing.md  08-visualising.md  09-refactoring.md  09-worked-example.md  10-visualising.md
editors/emacs/: bnf-ts-mode.el
grammar/: bnf.bnf
src/: dom.rs
tools/: Cargo.toml
tools/src/: dom.rs  lib.rs  main.rs  main_tests.rs  util.rs  visitors.rs
tools/src/dom/: analysis.rs  diagnostic.rs  directive.rs  error.rs  format.rs  grammar.rs  graph.rs  highlights.rs  mod.rs  nodes.rs  production.rs  railroad.rs  rename.rs  scaffold.rs  summary.rs  test_utils.rs  types.rs
tools/tests/: cli.rs  visitors.rs
tools/tests/support/: mod.rs
tree-sitter-bnf/: Cargo.toml  Makefile  README.md  grammar.js  package.json  tree-sitter-bnf.pc  tree-sitter.json
tree-sitter-bnf/bindings/c/: tree-sitter-bnf.pc.in
tree-sitter-bnf/bindings/rust/: lib.rs
tree-sitter-bnf/queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm
tree-sitter-bnf/src/: grammar.json  node-types.json  parser.c
tree-sitter-bnf/test/corpus/: alias.txt  axiom.txt  basics.txt  comments.txt  conflicts.txt  externals.txt  extras.txt  fields.txt  grammar.txt  include.txt  inline.txt  operators.txt  prec.txt  precedences.txt  structure.txt  supertypes.txt  token.txt  word.txt
tree-sitter-bnf/test/highlight/: highlights.bnf
