[workspace]
members = ["tree-sitter-bnf", "tools"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
authors = ["Alberto Simões <ambs@cpan.org>"]

# External tools required for grammar development (not enforced by cargo).
# Run `make ts-version-check` or install manually: npm install -g tree-sitter-cli
[workspace.metadata.tools]
tree-sitter-cli = ">=0.24.4"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"
