[package]
name = "ts-bnf-tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for converting BNF grammars to tree-sitter notation"

[[bin]]
name = "ts-bnf-tool"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tree-sitter-bnf = { path = "../tree-sitter-bnf", version = "0.1.0" }
tree-sitter = "0.26.8"
clap = { version = "4", features = ["derive"] }
