[package]
name = "ts-bnf-tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for converting BNF grammars to tree-sitter notation"
repository = "https://github.com/ambs/tree-sitter-bnf-tools"
readme = "../README.md"
keywords = ["bnf", "tree-sitter", "parser", "grammar", "cli"]
categories = ["command-line-utilities", "parser-implementations"]

[lib]
name = "ts_bnf_tool"
path = "src/lib.rs"

[[bin]]
name = "ts-bnf-tool"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tree-sitter-bnf = { path = "../tree-sitter-bnf", version = "0.1.0" }
tree-sitter = "0.26.8"
clap = { version = "4", features = ["derive"] }
indexmap = "2"

[dev-dependencies]
indoc = "2"
