[package]
name = "tree-sitter-bnf"
description = "A simple BNF syntax parser"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bnf"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-bnf"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
